<resources>
    <string name="app_name">HyperbaricQuiz</string>
    <string name="quiz_categories_description">Quiz Categories</string>
    <string name="next_button">Next</string>
    <string name="answer_c">This is answer C</string>
    <string name="answer_b">This is answer B</string>
    <string name="answer_a">This is answer A</string>
    <string name="question_one">This is a question?</string>
    <string name="id_one">1</string>
    <string name="pass_fail_text">You Passed!</string>
    <string name="score_text">Score:</string>
    <string name="category_name">Physics</string>
    <string name="percent_text">85%</string>
    <string name="passing_score_text">Passing score is 70%.</string>
    <string name="review_button">Review</string>
    <string name="home_button">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_high_scores">High Scores</string>
    <string name="menu_exam_ready">Exam Ready</string>
    <string name="load_failure">Failed to load content!</string>

    <string name="physics">physics</string>
    <string name="previous_button">Previous</string>
    <string name="submit_button">Submit</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="correct_answer">Correct Answer</string>

    <string name="json">
        "[{\"title\":\"physics\",\"id\":1,\"question\":\"This is a physics question?\",\"options\":[\"answerA\",\"answerB\",\"answerC\"],\"answer\":\"answerB\"},{\"title\":\"physics\",\"id\":2,\"question\":\"This is a second physics question?\",\"options\":[\"answerA1\",\"answerB2\",\"answerC2\"],\"answer\":\"answerA1\"},{\"title\":\"pressure\",\"id\":1,\"question\":\"This is question pressure?\",\"options\":[\"answer1\",\"answer2\",\"answer3\"],\"answer\":\"answer2\"},{\"title\":\"pressure\",\"id\":2,\"question\":\"This is pressure question 2\",\"options\":[\"answer1a\",\"answer2a\",\"answer3a\"],\"answer\":\"answer3a\"}]"
    </string>
</resources>
